--- a/mail_template.html
+++ b/mail_template.html
@@ -63,7 +63,7 @@
     <th>命中文件个数</th>
     <th>缓存文件命中率</th>
     <th>命中文件总大小</th>
-    <th>资源包下载总大小)</th>
+    <th>资源包下载总大小</th>
     <th>网络类型</th>
   </tr>
   </thead>
